<resources>
    <string name="app_name">Game</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_username">Enter username</string>
    <string name="logout">Logout</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="create_new_room">Create new room</string>
    <string name="enter_a_room_name">Enter a room name</string>
    <string name="available_users">Available users:</string>
    <string name="your_rooms">Your rooms:</string>
    <string name="stage">stage</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="stats">Stats</string>
    <string name="change_your_nickname">Change your nickname:</string>
    <string name="save_changes">Save changes</string>
    <string name="use_gravatar">Use Gravatar</string>
</resources>