<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/stageImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/stage"
        android:src="@drawable/stage0" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stageImage"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/messageAfterGameEnds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/word"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/a"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/a" />

            <Button
                android:id="@+id/b"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/b" />

            <Button
                android:id="@+id/c"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/c" />

            <Button
                android:id="@+id/d"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/d" />

            <Button
                android:id="@+id/e"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/e" />

            <Button
                android:id="@+id/f"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/f" />

            <Button
                android:id="@+id/g"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/g" />

            <Button
                android:id="@+id/h"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/h" />

            <Button
                android:id="@+id/i"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/i" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/j"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/j" />

            <Button
                android:id="@+id/k"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/k" />

            <Button
                android:id="@+id/l"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/l" />

            <Button
                android:id="@+id/m"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/m" />

            <Button
                android:id="@+id/n"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/n" />

            <Button
                android:id="@+id/o"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/o" />

            <Button
                android:id="@+id/p"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/p" />

            <Button
                android:id="@+id/q"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/q" />

            <Button
                android:id="@+id/r"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/r" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/s"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/s" />

            <Button
                android:id="@+id/t"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/t" />

            <Button
                android:id="@+id/u"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/u" />

            <Button
                android:id="@+id/v"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/v" />

            <Button
                android:id="@+id/w"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/w" />

            <Button
                android:id="@+id/x"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/x" />

            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/y" />

            <Button
                android:id="@+id/z"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/clickable"
                android:onClick="onLetterTouched"
                android:text="@string/z" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>