<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartGameActivity">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="300"
        android:title="@string/profile_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/stats"
        android:icon="@drawable/ic_equalizer"
        android:orderInCategory="300"
        android:title="@string/stats"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>